--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,21 @@
 
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Когнитивные искажения1</h1>
+    <h2>Когнитивные искажения2</h2>
+    <h3>Когнитивные искажения3</h3>
+    <header></header>
+    <section>
+      <p>
+        Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез
+        с нашей продуктивностью. Но мы часто игнорируем целостную картину.
+        Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с
+        ними можно как-то справиться, а иногда, к сожалению, нет.
+      </p>
+    </section>
+    <section></section>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
