Feat: add a header page

--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,56 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <h1>Когнитивные искажения1</h1>
-    <h2>Когнитивные искажения2</h2>
-    <h3>Когнитивные искажения3</h3>
-    <header></header>
-    <section>
-      <p>
-        Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез
-        с нашей продуктивностью. Но мы часто игнорируем целостную картину.
-        Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с
-        ними можно как-то справиться, а иногда, к сожалению, нет.
-      </p>
-    </section>
+    <header>
+      <div class="bg-before">
+        <div class="container">
+          <div class="main-img">
+            <img
+              src="../images/main.png"
+              alt="Изображение задумчивого человечка работающего за компьютером"
+            />
+          </div>
+          <div class="header-h1">
+            <h1>
+              Когнитивные <br />искажения <br />
+              <span class="header-h1-span">в програмировании</span>
+            </h1>
+          </div>
+          <div class="text-columns">
+            <div class="first-column">
+              <p>
+                Мы, разработчики, часто сталкиваемся с проблемами, которые идут
+                вразрез с нашей продуктивностью. Но мы часто игнорируем
+                целостную картину. Некоторые из этих проблем малозаметны,
+                некоторые существенны. Иногда с ними можно как-то справиться, а
+                иногда, к сожалению, нет.
+              </p>
+            </div>
+            <div class="second-column">
+              <p>
+                Вместе они формируют что-то вроде замкнутого цикла, и это может
+                привести к длительной потере продуктивности, багам и
+                бесконечному разочарованию.
+              </p>
+              <p>
+                Если мы сможем минимизировать воздействие одного или нескольких
+                из этих факторов, то сможем сломать и цикл, а остатки
+                нейтрализовать.
+              </p>
+              <div>
+                <a
+                  href="#5 когнитивных искажений о существовании которых стоит помнить"
+                  class="botton-header"
+                  >ПОДРОБНЕЕ</a
+                >
+                <!-- нужно будет поправить на нормальную ссылку -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section></section>
     <section></section>
     <main></main>
     <footer></footer>
