Refactor: change nesting HTML tags

--- a/src/index.html
+++ b/src/index.html
@@ -18,40 +18,40 @@
               alt="Изображение задумчивого человечка работающего за компьютером"
             />
           </div>
-          <div class="header-h1">
-            <h1>
+          <div class="header-text">
+            <h1 class="header-h1">
               Когнитивные <br />искажения <br />
               <span class="header-h1-span">в програмировании</span>
             </h1>
-          </div>
-          <div class="text-columns">
-            <div class="first-column">
-              <p>
-                Мы, разработчики, часто сталкиваемся с проблемами, которые идут
-                вразрез с нашей продуктивностью. Но мы часто игнорируем
-                целостную картину. Некоторые из этих проблем малозаметны,
-                некоторые существенны. Иногда с ними можно как-то справиться, а
-                иногда, к сожалению, нет.
-              </p>
-            </div>
-            <div class="second-column">
-              <p>
-                Вместе они формируют что-то вроде замкнутого цикла, и это может
-                привести к длительной потере продуктивности, багам и
-                бесконечному разочарованию.
-              </p>
-              <p>
-                Если мы сможем минимизировать воздействие одного или нескольких
-                из этих факторов, то сможем сломать и цикл, а остатки
-                нейтрализовать.
-              </p>
-              <div>
-                <a
-                  href="#5 когнитивных искажений о существовании которых стоит помнить"
-                  class="botton-header"
-                  >ПОДРОБНЕЕ</a
-                >
-                <!-- нужно будет поправить на нормальную ссылку -->
+            <div class="text-columns">
+              <div class="first-column">
+                <p>
+                  Мы, разработчики, часто сталкиваемся с проблемами, которые
+                  идут вразрез с нашей продуктивностью. Но мы часто игнорируем
+                  целостную картину. Некоторые из этих проблем малозаметны,
+                  некоторые существенны. Иногда с ними можно как-то справиться,
+                  а иногда, к сожалению, нет.
+                </p>
+              </div>
+              <div class="second-column">
+                <p>
+                  Вместе они формируют что-то вроде замкнутого цикла, и это
+                  может привести к длительной потере продуктивности, багам и
+                  бесконечному разочарованию.
+                </p>
+                <p>
+                  Если мы сможем минимизировать воздействие одного или
+                  нескольких из этих факторов, то сможем сломать и цикл, а
+                  остатки нейтрализовать.
+                </p>
+                <div>
+                  <!-- нужно будет поправить на нормальную ссылку -->
+                  <a
+                    href="#5 когнитивных искажений о существовании которых стоит помнить"
+                    class="botton-header"
+                    >ПОДРОБНЕЕ</a
+                  >
+                </div>
               </div>
             </div>
           </div>
