Feat: add new video section

--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,23 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header>
-      <div class="bg-before">
-        <div class="container">
+    <div class="bg-before">
+      <div class="flex-container">
+        <header class="container">
+          <div bg-header">
           <div class="main-img">
             <img
               src="../images/main.png"
               alt="Изображение задумчивого человечка работающего за компьютером"
             />
           </div>
-          <div class="header-text">
-            <h1 class="header-h1">
-              Когнитивные <br />искажения <br />
-              <span class="header-h1-span">в програмировании</span>
+          <div>
+            <h1>
+              <span class="h1-span">Когнитивные <br />искажения <br /></span>в
+              програмировании
             </h1>
             <div class="text-columns">
-              <div class="first-column">
+              <div>
                 <p>
                   Мы, разработчики, часто сталкиваемся с проблемами, которые
                   идут вразрез с нашей продуктивностью. Но мы часто игнорируем
@@ -55,12 +56,32 @@
               </div>
             </div>
           </div>
-        </div>
+        </header>
+        <section class="container">
+          <div>
+            <h1 class="section-h1">
+              Что же это такое, <br />
+              <span class="h1-span">когнитивные искажения?</span>
+            </h1>
+            <p class="section-video-text">
+              Что такое когнитивные искажения. Petrovna Channel
+            </p>
+          </div>
+          <div>
+            <iframe
+              class="video"
+              width="919"
+              height="569"
+              src="https://www.youtube.com/embed/jie9AizBqss"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+        <section></section>
+        <main></main>
+        <footer></footer>
       </div>
-    </header>
-    <section></section>
-    <section></section>
-    <main></main>
-    <footer></footer>
+    </div>
   </body>
 </html>
