Refactor: change margin and padding

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             </div>
           </div>
         </header>
-        <section class="container">
+        <section class="container section-video">
           <div>
             <h1 class="section-h1">
               Что же это такое, <br />
@@ -78,7 +78,9 @@
             ></iframe>
           </div>
         </section>
-        <section></section>
+        <section class="container" id="navigation">
+          <h1>5 когнитивных искажений о существовании которых стоит помнить</h1>
+        </section>
         <main></main>
         <footer></footer>
       </div>
