Feat: add section navigation

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,6 @@
     <div class="bg-before">
       <div class="flex-container">
         <header class="container">
-          <div bg-header">
           <div class="main-img">
             <img
               src="../images/main.png"
@@ -47,11 +46,7 @@
                 </p>
                 <div>
                   <!-- нужно будет поправить на нормальную ссылку -->
-                  <a
-                    href="#5 когнитивных искажений о существовании которых стоит помнить"
-                    class="botton-header"
-                    >ПОДРОБНЕЕ</a
-                  >
+                  <a href="#navigation" class="button-header">ПОДРОБНЕЕ</a>
                 </div>
               </div>
             </div>
@@ -79,7 +74,70 @@
           </div>
         </section>
         <section class="container" id="navigation">
-          <h1>5 когнитивных искажений о существовании которых стоит помнить</h1>
+          <div class="button-h1">
+            <h1>
+              <span class="h1-span">5 когнитивных искажений</span>
+              <br />о существовании которых стоит помнить
+            </h1>
+          </div>
+          <button class="button-navigation">
+            <a href="#ikea-effect"
+              ><h2 class="h2-number">1</h2>
+              <h3>Эффект ИКЕА</h3>
+              <p>
+                Вы переоцениваете собственные решения, и, как следствие,
+                недооцениваете решения других.
+              </p>
+            </a>
+          </button>
+
+          <button class="button-navigation">
+            <a
+              href="#5 когнитивных искажений о существовании которых стоит помнить"
+              ><h2 class="h2-number">2</h2>
+              <h3>Преждевременная оптимизация</h3>
+              <p>
+                Вы оптимизируете что-то задолго до того, как в этом появляется
+                необходимость.
+              </p>
+            </a>
+          </button>
+
+          <button class="button-navigation">
+            <a
+              href="#5 когнитивных искажений о существовании которых стоит помнить"
+              ><h2 class="h2-number">3</h2>
+              <h3>Искажение новизны</h3>
+              <p>
+                Вы даёте более высокую оценку тем событиям, которые произошли
+                недавно, и недооцениваете более старые.
+              </p>
+            </a>
+          </button>
+
+          <button class="button-navigation">
+            <a
+              href="#5 когнитивных искажений о существовании которых стоит помнить"
+              ><h2 class="h2-number">4</h2>
+              <h3>Гиперболическое обесценивание</h3>
+              <p>
+                Вы гонитесь за немедленной маленькой выгодой и игнорируете более
+                крупную, недоступную сейчас, но доступную в будущем.
+              </p>
+            </a>
+          </button>
+
+          <button class="button-navigation">
+            <a
+              href="#5 когнитивных искажений о существовании которых стоит помнить"
+              ><h2 class="h2-number">5</h2>
+              <h3>Ошибка планирования</h3>
+              <p>
+                Неправильно рассчитывать время необходимое для завершения
+                задачи.
+              </p>
+            </a>
+          </button>
         </section>
         <main></main>
         <footer></footer>
