Feat: add section ikea-effect

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <div class="main-img">
             <img
               src="../images/main.png"
-              alt="Изображение задумчивого человечка работающего за компьютером"
+              alt="РИсунок задумчивого человечка работающего за компьютером"
             />
           </div>
           <div>
@@ -45,7 +45,6 @@
                   остатки нейтрализовать.
                 </p>
                 <div>
-                  <!-- нужно будет поправить на нормальную ссылку -->
                   <a href="#navigation" class="button-header">ПОДРОБНЕЕ</a>
                 </div>
               </div>
@@ -73,6 +72,7 @@
             ></iframe>
           </div>
         </section>
+
         <section class="container" id="navigation">
           <div class="button-h1">
             <h1>
@@ -139,7 +139,47 @@
             </a>
           </button>
         </section>
-        <main></main>
+
+        <section class="container" id="ikea-effect">
+          <div class="effect-columns">
+            <div class="effect-img">
+              <img class="img"
+                src="../images/1.png"
+                alt="Рисунок двух человечков. Один работает за компьютером, а второй указывает, что ему делать"
+              />
+            </div>
+            <div class="second-column">
+              <p class="first-p">Когнитивные искажения</p>
+              <h2>Эффект ИКЕА</h2>
+              <p class="second-p">
+                Вы переоцениваете собственные решения, и, как следствие,
+                недооцениваете решения других.
+              </p>
+            </div>
+          </div>
+          <div class="line-h3">
+            <h3>КАК ПРОЯВЛЯЕТСЯ</h3>
+          </div>
+          <div class="effect-columns">
+            <div>
+              <p class="first-colum">
+                Когнитивное искажение называется так из-за того, что потребители
+                зачастую предпочитают покупать товары, которые они могут собрать
+                сами, а не уже собранные кем-то.
+              </p>
+            </div>
+            <div>
+              <p class="second-column">
+                Мы склонны переоцнивать наши собственные решения и недооценивать
+                решения других. Если вы когда-то работали в компании, которая
+                использовала тупой внутренний инструмент вместо более удобного
+                готового решения, вы понимаете, о чём я говорю.
+              </p>
+            </div>
+          </div>
+          <div class="bg"></div>
+        </section>
+
         <footer></footer>
       </div>
     </div>
