Feat: add section premature optimization

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
             </div>
           </div>
         </header>
+
         <section class="container section-video">
           <div>
             <h1 class="section-h1">
@@ -92,8 +93,7 @@
           </button>
 
           <button class="button-navigation">
-            <a
-              href="#5 когнитивных искажений о существовании которых стоит помнить"
+            <a href="#premature-optimization"
               ><h2 class="h2-number">2</h2>
               <h3>Преждевременная оптимизация</h3>
               <p>
@@ -143,7 +143,8 @@
         <section class="container" id="ikea-effect">
           <div class="effect-columns">
             <div class="effect-img">
-              <img class="img"
+              <img
+                class="img"
                 src="../images/1.png"
                 alt="Рисунок двух человечков. Один работает за компьютером, а второй указывает, что ему делать"
               />
@@ -178,6 +179,47 @@
             </div>
           </div>
           <div class="bg"></div>
+        </section>
+
+        <section class="container" id="premature-optimization">
+          <div class="effect-columns">
+            <div class="second-column">
+              <p class="first-p">Когнитивные искажения</p>
+              <h2>Преждевременная оптимизация</h2>
+              <p class="second-p">
+                Вы оптимизируете что-то задолго до того, как в этом появляется
+                необходимость..
+              </p>
+            </div>
+
+            <div class="effect-img">
+              <img
+                class="img"
+                src="../images/2.png"
+                alt="Рисунок человечка, который показывает взлёт космической ракеты на ноутбуке"
+              />
+            </div>
+          </div>
+          <div class="line-h3">
+            <h3>КАК ПРОЯВЛЯЕТСЯ</h3>
+          </div>
+          <div class="effect-columns">
+            <div>
+              <p class="first-colum">
+                Если вы добавите аэродинамический спойлер к своему старому
+                автомобилю вместо ремонта мотора, то автомобиль не станет
+                быстрее.
+              </p>
+            </div>
+            <div>
+              <p class="second-column">
+                Отличный пример: писать максимально подтюненный и
+                высокопроизводительный код для всего лишь экспериментального
+                проекта.
+              </p>
+            </div>
+          </div>
+          <div class="bg bg-premature-optimization"></div>
         </section>
 
         <footer></footer>
