Feat: add section distortion-of-novelty

--- a/src/index.html
+++ b/src/index.html
@@ -104,8 +104,7 @@
           </button>
 
           <button class="button-navigation">
-            <a
-              href="#5 когнитивных искажений о существовании которых стоит помнить"
+            <a href="#distortion-of-novelty"
               ><h2 class="h2-number">3</h2>
               <h3>Искажение новизны</h3>
               <p>
@@ -188,7 +187,7 @@
               <h2>Преждевременная оптимизация</h2>
               <p class="second-p">
                 Вы оптимизируете что-то задолго до того, как в этом появляется
-                необходимость..
+                необходимость.
               </p>
             </div>
 
@@ -220,6 +219,48 @@
             </div>
           </div>
           <div class="bg bg-premature-optimization"></div>
+        </section>
+
+        <section class="container" id="distortion-of-novelty">
+          <div class="effect-columns">
+            <div class="effect-img">
+              <img
+                class="img"
+                src="../images/3.png"
+                alt="Рисунок человечка, у которого зажглась лампочка-идея, а рядом стоит мусорное ведро со старыми"
+              />
+            </div>
+
+            <div class="second-column">
+              <p class="first-p">Когнитивные искажения</p>
+              <h2>Искажение новизны</h2>
+              <p class="second-p">
+                Вы даёте более высокую оценку тем событиям, которые произошли
+                недавно, и недооцениваете более старые.
+              </p>
+            </div>
+          </div>
+          <div class="line-h3">
+            <h3>КАК ПРОЯВЛЯЕТСЯ</h3>
+          </div>
+          <div class="effect-columns">
+            <div>
+              <p class="first-colum">
+                Часто это искажение настигает нас, когда нужно решение проблемы
+                и… о! Мы как раз только что решили подобную проблему! Давайте
+                использовать это же решение, потому что оно сработало, и мы
+                помним как!
+              </p>
+            </div>
+            <div>
+              <p class="second-column">
+                Вы замечаете, что пользуетесь теми же рабочими методиками раз за
+                разом? Если да, возможно, вы смотрите на разные проблемы под
+                одним и тем же углом.
+              </p>
+            </div>
+          </div>
+          <div class="bg"></div>
         </section>
 
         <footer></footer>
