--- a/src/index.html
+++ b/src/index.html
@@ -115,8 +115,7 @@
           </button>
 
           <button class="button-navigation">
-            <a
-              href="#5 когнитивных искажений о существовании которых стоит помнить"
+            <a href="#hyperbolic-depreciation"
               ><h2 class="h2-number">4</h2>
               <h3>Гиперболическое обесценивание</h3>
               <p>
@@ -260,7 +259,50 @@
               </p>
             </div>
           </div>
-          <div class="bg"></div>
+          <div class="bg-901"></div>
+        </section>
+
+        <section class="container" id="hyperbolic-depreciation">
+          <div class="effect-columns">
+            <div class="second-column">
+              <p class="first-p">Когнитивные искажения</p>
+              <h2>Гиперболическое обесценивание</h2>
+              <p class="second-p">
+                Вы гонитесь за немедленной маленькой выгодой и игнорируете более
+                крупную, недоступную сейчас, но доступную в будущем.
+              </p>
+            </div>
+
+            <div class="effect-img">
+              <img
+                class="img"
+                src="../images/4.png"
+                alt="Рисунок человечка, который подбирает упавшие монетки, но не ищет сундук из которого они выпали"
+              />
+            </div>
+          </div>
+          <div class="line-h3">
+            <h3>КАК ПРОЯВЛЯЕТСЯ</h3>
+          </div>
+          <div class="effect-columns">
+            <div>
+              <p class="first-colum">
+                Вы когда-нибудь откладывали написание теста? Ловили себя на
+                использовании клавиш-стрелок в Vim? Поздравляю, у вас
+                наблюдается гиперболическое обесценивание.
+              </p>
+            </div>
+            <div>
+              <p class="second-column">
+                Немедленная выгода от использования чего-то быстродоступного
+                значительно смягчает боль, которую нужно перетерпеть, чтобы
+                усвоить правильный синтаксис для перемещения на нужную строчку.
+                Но как только вы поймёте как перемещаться быстрее, выгода в
+                будущем намного выше. В итоге вы сохраните много времени.
+              </p>
+            </div>
+          </div>
+          <div class="bg bg-premature-optimization"></div>
         </section>
 
         <footer></footer>
