--- a/src/index.html
+++ b/src/index.html
@@ -305,6 +305,47 @@
           <div class="bg bg-premature-optimization"></div>
         </section>
 
+        <section class="container" id="errors-in-planning">
+          <div class="effect-columns">
+            <div class="effect-img">
+              <img
+                class="img"
+                src="../images/5.png"
+                alt="Рисунок человечка, который что-то записывает в блакнот"
+              />
+            </div>
+
+            <div class="second-column">
+              <p class="first-p">Когнитивные искажения</p>
+              <h2>Ошибка планирования</h2>
+              <p class="second-p">
+                Неправильно рассчитывать время необходимое для завершения
+                задачи.
+              </p>
+            </div>
+          </div>
+          <div class="line-h3">
+            <h3>КАК ПРОЯВЛЯЕТСЯ</h3>
+          </div>
+          <div class="effect-columns">
+            <div>
+              <p class="first-colum">
+                Одно из искажений, которое должно признать большинство из нас. И
+                менеджеры проекта, и сами пользователи продукта — все склонны
+                ставить сроки, в которые невозможно закончить запланированное.
+              </p>
+            </div>
+            <div>
+              <p class="second-column">
+                Это отлично выражается в старом афоризме: Первые 90% готового
+                кода отнимают первые 90% времени разработки. Оставшиеся 10%
+                отнимают вторые 90% времени разработки.
+              </p>
+            </div>
+          </div>
+          <div class="bg-901"></div>
+        </section>
+
         <footer></footer>
       </div>
     </div>
