Fix: id nafigation

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
 
           <button class="button-navigation">
             <a
-              href="#5 когнитивных искажений о существовании которых стоит помнить"
+              href="#errors-in-planning"
               ><h2 class="h2-number">5</h2>
               <h3>Ошибка планирования</h3>
               <p>
