Feat: add footer

--- a/src/index.html
+++ b/src/index.html
@@ -126,8 +126,7 @@
           </button>
 
           <button class="button-navigation">
-            <a
-              href="#errors-in-planning"
+            <a href="#errors-in-planning"
               ><h2 class="h2-number">5</h2>
               <h3>Ошибка планирования</h3>
               <p>
@@ -346,7 +345,52 @@
           <div class="bg-901"></div>
         </section>
 
-        <footer></footer>
+        <footer class="container">
+          <div class="footer-columns">
+            <div class="second-p">
+              <p class="footer-first-colum">
+                Хотите узнать больше? <br />
+                Подпишитесь на обновления
+              </p>
+            </div>
+
+            <form class="footer-form">
+              <p class="email-adress-p">Электронная почта</p>
+              <div class="row">
+                <label for="email-adress"></label>
+                <input
+                  type="text"
+                  name=""
+                  id="email-adress"
+                  class="email-adress-footer"
+                  placeholder="Ваша электронная почта"
+                />
+                <button class="button-footer">
+                  <div class="bg-button-footer">
+                    <a href="#"></a>
+                  </div>
+                </button>
+              </div>
+              <p class="service-rules">
+                Подписываясь, вы принимаете
+                <a href="#" class="service-rules">правила сервиса</a>
+              </p>
+            </form>
+          </div>
+          <div class="contact-information">
+            <p>© 2020 Константин Константинопольский</p>
+            <p>
+              По материалам статьи
+              <a
+                href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b"
+                >Yash Ranadive Cognitive Biases in Programming</a
+              >
+            </p>
+            <p>
+              <a href="https://ru.hexlet.io/">Курсы программирования Hexlet</a>
+            </p>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
