Fix: url images

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
         <header class="container">
           <div class="main-img">
             <img
-              src="../images/main.png"
-              alt="РИсунок задумчивого человечка работающего за компьютером"
+              src="images/main.png"
+              alt="Рисунок задумчивого человечка работающего за компьютером"
             />
           </div>
           <div>
@@ -142,7 +142,7 @@
             <div class="effect-img">
               <img
                 class="img"
-                src="../images/1.png"
+                src="images/1.png"
                 alt="Рисунок двух человечков. Один работает за компьютером, а второй указывает, что ему делать"
               />
             </div>
@@ -192,7 +192,7 @@
             <div class="effect-img">
               <img
                 class="img"
-                src="../images/2.png"
+                src="images/2.png"
                 alt="Рисунок человечка, который показывает взлёт космической ракеты на ноутбуке"
               />
             </div>
@@ -224,7 +224,7 @@
             <div class="effect-img">
               <img
                 class="img"
-                src="../images/3.png"
+                src="images/3.png"
                 alt="Рисунок человечка, у которого зажглась лампочка-идея, а рядом стоит мусорное ведро со старыми"
               />
             </div>
@@ -275,7 +275,7 @@
             <div class="effect-img">
               <img
                 class="img"
-                src="../images/4.png"
+                src="images/4.png"
                 alt="Рисунок человечка, который подбирает упавшие монетки, но не ищет сундук из которого они выпали"
               />
             </div>
@@ -309,7 +309,7 @@
             <div class="effect-img">
               <img
                 class="img"
-                src="../images/5.png"
+                src="images/5.png"
                 alt="Рисунок человечка, который что-то записывает в блакнот"
               />
             </div>
