Fix: main jpeg and header columns

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                   нескольких из этих факторов, то сможем сломать и цикл, а
                   остатки нейтрализовать.
                 </p>
-                <div>
+                <div class="div-button-header">
                   <a href="#navigation" class="button-header">ПОДРОБНЕЕ</a>
                 </div>
               </div>
