Fix: position elements header

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <div>
             <h1>
               <span class="h1-span">Когнитивные <br />искажения <br /></span>в
-              програмировании
+              программировании
             </h1>
             <div class="text-columns">
               <div>
