Fix: position bg

--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
                 alt="Рисунок двух человечков. Один работает за компьютером, а второй указывает, что ему делать"
               />
             </div>
-            <div class="second-column">
+            <div class="second-column left-column">
               <p class="first-p">Когнитивные искажения</p>
               <h2>Эффект ИКЕА</h2>
               <p class="second-p">
@@ -230,7 +230,7 @@
               />
             </div>
 
-            <div class="second-column">
+            <div class="second-column left-column">
               <p class="first-p">Когнитивные искажения</p>
               <h2>Искажение новизны</h2>
               <p class="second-p">
@@ -315,7 +315,7 @@
               />
             </div>
 
-            <div class="second-column">
+            <div class="second-column left-column">
               <p class="first-p">Когнитивные искажения</p>
               <h2>Ошибка планирования</h2>
               <p class="second-p">
