Fix: position jpg

--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
 
         <section class="container" id="premature-optimization">
           <div class="effect-columns">
-            <div class="second-column">
+            <div class="second-column column-width">
               <p class="first-p">Когнитивные искажения</p>
               <h2>Преждевременная оптимизация</h2>
               <p class="second-p">
@@ -190,7 +190,7 @@
               </p>
             </div>
 
-            <div class="effect-img">
+            <div class="effect-img img-column">
               <img
                 class="img"
                 src="images/2.png"
@@ -273,7 +273,7 @@
               </p>
             </div>
 
-            <div class="effect-img">
+            <div class="effect-img img-padding">
               <img
                 class="img"
                 src="images/4.png"
