Fix: img position

--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
 
         <section class="container" id="premature-optimization">
           <div class="effect-columns">
-            <div class="second-column column-width">
+            <div class="second-column">
               <p class="first-p">Когнитивные искажения</p>
               <h2>Преждевременная оптимизация</h2>
               <p class="second-p">
@@ -192,13 +192,13 @@
 
             <div class="effect-img img-column">
               <img
-                class="img"
+                class="img-right"
                 src="images/2.png"
                 alt="Рисунок человечка, который показывает взлёт космической ракеты на ноутбуке"
               />
             </div>
           </div>
-          <div class="line-h3">
+          <div class="line-h3-img-right">
             <h3>КАК ПРОЯВЛЯЕТСЯ</h3>
           </div>
           <div class="effect-columns">
