Fix: elements position

--- a/src/index.html
+++ b/src/index.html
@@ -268,20 +268,22 @@
               <p class="first-p">Когнитивные искажения</p>
               <h2>Гиперболическое обесценивание</h2>
               <p class="second-p">
-                Вы гонитесь за немедленной маленькой выгодой и игнорируете более
-                крупную, недоступную сейчас, но доступную в будущем.
+                Вы гонитесь за немедленной <br />
+                маленькой выгодой и игнорируете <br />
+                более крупную, недоступную сейчас, <br />
+                но доступную в будущем.
               </p>
             </div>
 
-            <div class="effect-img img-padding">
+            <div class="effect-img img-column">
               <img
-                class="img"
+                class="img-right"
                 src="images/4.png"
                 alt="Рисунок человечка, который подбирает упавшие монетки, но не ищет сундук из которого они выпали"
               />
             </div>
           </div>
-          <div class="line-h3">
+          <div class="line-h3-img-right">
             <h3>КАК ПРОЯВЛЯЕТСЯ</h3>
           </div>
           <div class="effect-columns">
