Fix: elements position

--- a/src/index.html
+++ b/src/index.html
@@ -275,7 +275,7 @@
               </p>
             </div>
 
-            <div class="effect-img img-column">
+            <div class="effect-img img-column-2">
               <img
                 class="img-right"
                 src="images/4.png"
