--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
             <div class="line-h3-img-right">
               <h3>КАК ПРОЯВЛЯЕТСЯ</h3>
             </div>
-            <div class="effect-columns">
+            <div class="premature-effect-columns">
               <div>
                 <p class="first-colum">
                   Если вы добавите аэродинамический спойлер к своему старому
